Updated pom.xml
Added cucumber and junit dependencies. Added surefire plugin.